<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GarajeActivity"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:contentDescription="@string/btn_mant_programados"
        android:id="@+id/btnListMantProgramados"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/listamantenimientosprogramados"
        app:layout_constraintEnd_toStartOf="@+id/btnNuevoVehiculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <ImageButton
        android:contentDescription="@string/btn_nuevo_vehiculo"
        android:id="@+id/btnNuevoVehiculo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/nuevovehiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>


    <ImageButton
        android:contentDescription="@string/btn_mensajes"
        android:id="@+id/btnMensajes"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/mensajes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNuevoVehiculo"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <TextView
        android:id="@+id/tvNumeroMensajes"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:textColor="@color/azul_oscuro"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/fondomensaje"
        app:layout_constraintBottom_toBottomOf="@+id/btnMensajes"
        app:layout_constraintStart_toEndOf="@+id/btnMensajes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerVehiculo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevoVehiculo"
        android:scrollbars="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>